[gd_scene load_steps=7 format=3 uid="uid://bm2orke4mlffl"]

[ext_resource type="Script" path="res://scripts/key_door.gd" id="1_1khce"]
[ext_resource type="Texture2D" uid="uid://bg27k5sblx533" path="res://assets/objects/Door_01.png" id="1_4wlju"]

[sub_resource type="Gradient" id="Gradient_6wbkf"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yanry"]
gradient = SubResource("Gradient_6wbkf")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d3co4"]
size = Vector2(158, 252)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_pvdtd"]
properties/0/path = NodePath(".:is_open")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="KeyDoor" type="Node2D"]
script = ExtResource("1_1khce")

[node name="DoorClosed" type="Sprite2D" parent="."]
position = Vector2(0, -128)
texture = ExtResource("1_4wlju")

[node name="DoorOpen" type="Sprite2D" parent="."]
visible = false
position = Vector2(3.8147e-06, -119)
scale = Vector2(0.5, 238)
texture = SubResource("GradientTexture1D_yanry")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -126)
shape = SubResource("RectangleShape2D_d3co4")

[node name="KeyDoorSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_pvdtd")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_key_entered"]
[connection signal="delta_synchronized" from="KeyDoorSynchronizer" to="." method="_on_key_door_synchronizer_delta_synchronized"]
